tests/testdata/npm/check_errors/main_all.out
Download http://localhost:4260/@denotest/check-error
Download http://localhost:4260/@denotest/check-error/1.0.0.tgz
Check file:///[WILDCARD]/check_errors/main.ts
error: TS2506 [ERROR]: 'Class1' is referenced directly or indirectly in its own base expression.
export class Class1 extends Class2 {
             ~~~~~~
    at file:///[WILDCARD]/check-error/1.0.0/index.d.ts:2:14

TS2506 [ERROR]: 'Class2' is referenced directly or indirectly in its own base expression.
export class Class2 extends Class1 {
             ~~~~~~
    at file:///[WILDCARD]/check-error/1.0.0/index.d.ts:5:14

TS2339 [ERROR]: Property 'Asdf' does not exist on type 'typeof import("file:///[WILDCARD]/@denotest/check-error/1.0.0/index.d.ts")'.
console.log(test.Asdf); // should error
                 ~~~~
    at file:///[WILDCARD]/check_errors/main.ts:3:18

Found 3 errors.
